Buttons:   index.html Drawing one ball:   main.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
   <body>
     <h1>bouncing balls</h1>
+    <!--
+    <button type="button collosionBut">Collosion</button>
+    <button type="button dominantBut">Dominant</button>
+    --->
     <canvas></canvas>
 
     <script src="main.js"></script>
