Added the two buttons:   index.html Addes the two special effects:   main.js

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
   <body>
     <h1>bouncing balls</h1>
-    <!--
-    <button type="button collosionBut">Collosion</button>
-    <button type="button dominantBut">Dominant</button>
-    --->
+    <input type="button" value="Collision:off" id="collisionBut" />
+    <input type="button" id="dominatBut" value="Dominant: off"/>
+
     <canvas></canvas>
 
     <script src="main.js"></script>
