Added teleport button:   index.html Added teleport fun:   main.js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>bouncing balls</h1>
     <input type="button" value="Collision:off" id="collisionBut" />
     <input type="button" id="dominatBut" value="Dominant: off"/>
+    <input type="button" id="teleport" value="Teleport: off"/>
 
     <canvas></canvas>
 
